<resources>
    <string name="app_name">PATPAT.LK</string>
    <string name="welcome">Welcome</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">sign up</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="login">LOGIN</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="price">LKR 5,222,000</string>
    <string-array name="titles">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Ms.</item>
        <item>Rev.</item>
    </string-array>

    <string-array name="vehicleType">
        <item>Cars</item>
        <item>Vans</item>
        <item>SUVs</item>
        <item>Bus</item>
        <item>Three Wheelers</item>
        <item>Motorbikes</item>
        <item>Trucks</item>
        <item>Agri Vehicles</item>
        <item>Heavy Machinery</item>
    </string-array>

    <string-array name="transmissions">
        <item>Manual</item>
        <item>Automatic</item>
        <item>Tiptronic</item>
    </string-array>

    <string-array name="manufacturers">
        <item>Audi</item>
        <item>Benz</item>
        <item>BMW</item>
    </string-array>

    <string-array name="conditions">
        <item>New</item>
        <item>Reconditioned</item>
        <item>Used</item>
    </string-array>

    <string-array name="fuelTypes">
        <item>Diesel</item>
        <item>Electric</item>
        <item>Hybrid</item>
        <item>Petrol</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faq">FAQ</string>
    <string name="how_do_i_post_an_advertisement">How do i post an advertisement?</string>
    <string name="title_of_the_advertisement">Title of the Advertisement</string>
    <string name="title_ofthe_advertisement">Title ofthe Advertisement</string>
    <string name="description">Description</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="transmission">Transmission</string>

</resources>